# vroomssl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.json  configure.sh  out.err  stats.txt  test.sh
baselines/: 0001-expose-internal-symbols-Google-benchmarks.patch  README.md
baselines/arkworks/: Cargo.toml  criterion_to_csv.py  modmul_criterion.csv
baselines/arkworks/benches/: bench_arkworks.rs
baselines/arkworks/src/: lib.rs  modcache.rs
bench/: bigint.cc  bignum.cc  drns.cc  flint.cc  flint.cc.old  main.cc  modexp.cc  rns.cc  rns_internal.cc  rns_mul.cc  rsa.cc  rsa_evp.cc  rsa_rns.cc
crypto/evp/: evp_test.cc
crypto/rsa/: rsa_test.cc
include/openssl/: bn.h  rsa.h
results/: batching_diffring.txt  ctime_select_compiler_flex.txt  ele_mult_microbench.txt  ele_mult_microbench_summary.txt  jan20-flex.txt  jan21_new.txt  jan21_old.txt  latest.txt  our_boringssl_clang15.txt  our_boringssl_clang21.txt  rns_vs_drns.txt
results/comparison_12_26/: boringssl.txt  openssl.txt  openssl_googlebench.txt
results/csv.clang15/: slowdown_mystery.csv
results/csv.clang21/: slowdown_mystery.csv
rns/: drns_test.cc  fmpz_class.hh  rns_test.cc
scripts/: bench-compiler-v2.sh  bench-compiler.sh  bench-v1.sh  bench-v2-consttime.sh  bench-v2.sh  bench-v3.sh  bench-v4.sh  bench.sh  diffring-batch.sh  official_bench.sh  priv2048.pem  priv3072.pem  priv4096.pem  profile-v2.sh  profile.sh  pub2048.pem  pub3072.pem  pub4096.pem  test.py  test_rsa.sh  test_sign.sh  test_verify.sh
tool/: internal.h  modexp_bench.c  sign.cc  test_ossl_wrapper.cpp  tool.cc  verify.cc
(+74 files in other folders)
