[package]
name = "modmul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = {version="0.5.0", features=["asm"]}

# Ensure proper optimization
# https://github.com/arkworks-rs/crypto-primitives/blob/main/Cargo.toml

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_arkworks"
harness = false